--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .rised-area {
-    background-color: rgb(128, 236, 77);
+    background: #FFFFFF;
     width: auto;
     height: 600px;
     display: flex;
@@ -30,7 +30,7 @@ body {
 }
 
 .rised-right {
-    background-color: rgb(47, 17, 66);
+    background: #FFFFFF;
     width: 410px;
     height: 470px;
     display: flex;
@@ -38,8 +38,13 @@ body {
     justify-content: center;
 }
 
+.img-forca{
+    width: 400px;
+    height: 460px;
+}
+
 .rised-left {
-    background-color: rgb(27, 195, 207);
+    background: #FFFFFF;
     width: 510px;
     height: 470px;
     display: flex;
@@ -57,6 +62,7 @@ body {
     align-items: center;
     justify-self: center;
     padding-left: 20px;
+    cursor: pointer;
 }
 
 .choice-word p {
@@ -113,7 +119,7 @@ body {
 }
 
 .lower-area {
-    background-color: crimson;
+    background: #FFFFFF;
     width: auto;
     height: 240px;
     display: flex;
@@ -123,9 +129,9 @@ body {
 }
 
 .kayboard {
-    background-color: gold;
-    width: 600px;
-    height: 100px;
+    background: #FFFFFF;
+    width: 650px;
+    height: 130px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,6 +147,8 @@ body {
     border-radius: 3px;
     text-align: center;
     padding-left: 13px;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 .button-letter p {
